--- a/src/app/pages/state/state.component.html
+++ b/src/app/pages/state/state.component.html
@@ -1,31 +1,45 @@
 @if (userState) {
     <div class="card flex flex-col gap-6 w-full">
         <div class="grid grid-cols-1 md:grid-cols-12 gap-6">
-            <div class="md:col-span-3 flex flex-col gap-2">
+            <div class="md:col-span-2 flex flex-col gap-2">
                 <h6>DIRECCIÓN ZONAL:</h6>
                 {{ userState.direccionZonal }}
             </div>
 
-            <div class="md:col-span-3 flex flex-col gap-2">
+            <div class="md:col-span-2 flex flex-col gap-2">
                 <h6>PROVINCIA:</h6>
                 {{ userState.provincia }}
             </div>
 
-            <div class="md:col-span-3 flex flex-col gap-2">
+            <div class="md:col-span-2 flex flex-col gap-2">
                 <h6>NÚMERO DE CÉDULA:</h6>
                 {{ userState.cedula }}
             </div>
 
-            <div class="md:col-span-3 flex flex-col gap-2">
-                <h6>NOMBRES Y APELLIDOS :</h6>
+            <div class="md:col-span-4 flex flex-col gap-2">
+                <h6>APELLIDOS Y NOMBRES:</h6>
                 {{ userState.nombres }}
+            </div>
+
+            <div class="md:col-span-2 flex flex-col gap-2">
+                <h6>Estado:</h6>
+                {{ userState.habilitado }} (Unidad Registro Social)
+            </div>
+
+            <div class="md:col-span-4 flex flex-col gap-2">
+                <h6>ACTIVIDAD:</h6>
+                {{ userState.actividad }}
+            </div>
+
+            <div class="md:col-span-4 flex flex-col gap-2">
+                <h6>PROGRESO:</h6>
+                <p-tag [severity]="userState.cumple!='Completo'?'danger':undefined">{{ userState.cumple }}</p-tag>
             </div>
         </div>
     </div>
 
-
     <div class="grid grid-cols-12 gap-4 grid-nogutter">
-        <div class="col-span-4">
+        <div class="col-span-3">
             <div
                 class="flex flex-col sm:flex-row sm:items-center p-6 gap-4 border-t border-surface-200 dark:border-surface-700"
             >
@@ -35,14 +49,14 @@
                     </div>
 
                     <p-tag
-                        [severity]="userState.curso!='si'?'danger':undefined"
+                        [severity]="userState.curso!='completa'?'danger':undefined"
                         class="absolute"
                         styleClass="dark:!bg-surface-900"
                         [style.left.px]="4"
                         [style.top.px]="4">
                         <div class="flex items-center gap-2 px-1">
                                 <span class="text-base" style="font-size: 22px;width: 120px">
-                                    {{ userState.curso == 'si' ? 'Cumple' : 'No Cumple' }}
+                                    {{ userState.curso == 'completa' ? 'Cumple' : 'No Cumple' }}
                                 </span>
                         </div>
                     </p-tag>
@@ -51,7 +65,7 @@
         </div>
 
         @if (userState.actividadA1) {
-            <div class="col-span-4">
+            <div class="col-span-3">
                 <div
                     class="flex flex-col sm:flex-row sm:items-center p-6 gap-4 border-t border-surface-200 dark:border-surface-700"
                 >
@@ -61,14 +75,14 @@
                         </div>
 
                         <p-tag
-                            [severity]="userState.actividadA1!='si'?'danger':undefined"
+                            [severity]="userState.actividadA1!='completa'?'danger':undefined"
                             class="absolute"
                             styleClass="dark:!bg-surface-900"
                             [style.left.px]="4"
                             [style.top.px]="4">
                             <div class="flex items-center gap-2 px-1">
                                 <span class="text-base" style="font-size: 22px;width: 120px">
-                                    {{ userState.actividadA1 == 'si' ? 'Cumple' : 'No Cumple' }}
+                                    {{ userState.actividadA1 == 'completa' ? 'Cumple' : 'No Cumple' }}
                                 </span>
                             </div>
                         </p-tag>
@@ -78,7 +92,7 @@
         }
 
         @if (userState.actividadA2) {
-            <div class="col-span-4">
+            <div class="col-span-3">
                 <div
                     class="flex flex-col sm:flex-row sm:items-center p-6 gap-4 border-t border-surface-200 dark:border-surface-700"
                 >
@@ -88,14 +102,14 @@
                         </div>
 
                         <p-tag
-                            [severity]="userState.actividadA2!='si'?'danger':undefined"
+                            [severity]="userState.actividadA2!='completa'?'danger':undefined"
                             class="absolute"
                             styleClass="dark:!bg-surface-900"
                             [style.left.px]="4"
                             [style.top.px]="4">
                             <div class="flex items-center gap-2 px-1">
                                 <span class="text-base" style="font-size: 22px;width: 120px">
-                                    {{ userState.actividadA2 == 'si' ? 'Cumple' : 'No Cumple' }}
+                                    {{ userState.actividadA2 == 'completa' ? 'Cumple' : 'No Cumple' }}
                                 </span>
                             </div>
                         </p-tag>
@@ -105,7 +119,7 @@
         }
 
         @if (userState.actividadB1) {
-            <div class="col-span-4">
+            <div class="col-span-3">
                 <div
                     class="flex flex-col sm:flex-row sm:items-center p-6 gap-4 border-t border-surface-200 dark:border-surface-700"
                 >
@@ -115,14 +129,14 @@
                         </div>
 
                         <p-tag
-                            [severity]="userState.actividadB1!='si'?'danger':undefined"
+                            [severity]="userState.actividadB1!='completa'?'danger':undefined"
                             class="absolute"
                             styleClass="dark:!bg-surface-900"
                             [style.left.px]="4"
                             [style.top.px]="4">
                             <div class="flex items-center gap-2 px-1">
                                 <span class="text-base" style="font-size: 22px;width: 120px">
-                                    {{ userState.actividadB1 == 'si' ? 'Cumple' : 'No Cumple' }}
+                                    {{ userState.actividadB1 == 'completa' ? 'Cumple' : 'No Cumple' }}
                                 </span>
                             </div>
                         </p-tag>
@@ -132,7 +146,7 @@
         }
 
         @if (userState.actividadB2) {
-            <div class="col-span-4">
+            <div class="col-span-3">
                 <div
                     class="flex flex-col sm:flex-row sm:items-center p-6 gap-4 border-t border-surface-200 dark:border-surface-700"
                 >
@@ -142,14 +156,14 @@
                         </div>
 
                         <p-tag
-                            [severity]="userState.actividadB2!='si'?'danger':undefined"
+                            [severity]="userState.actividadB2!='completa'?'danger':undefined"
                             class="absolute"
                             styleClass="dark:!bg-surface-900"
                             [style.left.px]="4"
                             [style.top.px]="4">
                             <div class="flex items-center gap-2 px-1">
                                 <span class="text-base" style="font-size: 22px;width: 120px">
-                                    {{ userState.actividadB2 == 'si' ? 'Cumple' : 'No Cumple' }}
+                                    {{ userState.actividadB2 == 'completa' ? 'Cumple' : 'No Cumple' }}
                                 </span>
                             </div>
                         </p-tag>
@@ -159,18 +173,17 @@
         }
     </div>
 
-    <div class="card">
-        <label for="">
-            Comentario:
-        </label>
+    <!--    <div class="card">-->
+        <!--        <label for="">-->
+        <!--            Comentario:-->
+        <!--        </label>-->
 
-        <textarea class="w-full" rows="8" cols="100" pTextarea [formControl]="commentary"></textarea>
+        <!--        <textarea class="w-full" rows="8" cols="100" pTextarea [formControl]="commentary"></textarea>-->
 
-        <p-button label="Enviar" [icon]="PrimeIcons.SEND" (onClick)="createCommentary()" [disabled]="commentary.disabled"/>
-    </div>
+        <!--        <p-button label="Enviar" [icon]="PrimeIcons.SEND" (onClick)="createCommentary()" [disabled]="commentary.disabled"/>-->
+        <!--    </div>-->
 }
 
 @if (!userState) {
     <p-message severity="error">No cuenta con registro de su actividad</p-message>
-
 }
