--- a/src/app/pages/state/state.component.html
+++ b/src/app/pages/state/state.component.html
@@ -31,9 +31,9 @@
                 {{ userState.actividad }}
             </div>
 
-            <div class="md:col-span-4 flex flex-col gap-2">
+            <div class="md:col-span-2 flex flex-col gap-2">
                 <h6>PROGRESO:</h6>
-                <p-tag [severity]="userState.cumple!='Completo'?'danger':undefined">{{ userState.cumple }}</p-tag>
+                <p-tag [severity]="userState.cumple!='Completo'?'danger':'success'">{{ userState.cumple }}</p-tag>
             </div>
         </div>
     </div>
@@ -49,7 +49,7 @@
                     </div>
 
                     <p-tag
-                        [severity]="userState.curso!='completa'?'danger':undefined"
+                        [severity]="userState.curso!='completa'?'danger':'success'"
                         class="absolute"
                         styleClass="dark:!bg-surface-900"
                         [style.left.px]="4"
@@ -75,7 +75,7 @@
                         </div>
 
                         <p-tag
-                            [severity]="userState.actividadA1!='completa'?'danger':undefined"
+                            [severity]="userState.actividadA1!='completa'?'danger':'success'"
                             class="absolute"
                             styleClass="dark:!bg-surface-900"
                             [style.left.px]="4"
@@ -102,7 +102,7 @@
                         </div>
 
                         <p-tag
-                            [severity]="userState.actividadA2!='completa'?'danger':undefined"
+                            [severity]="userState.actividadA2!='completa'?'danger':'success'"
                             class="absolute"
                             styleClass="dark:!bg-surface-900"
                             [style.left.px]="4"
@@ -129,7 +129,7 @@
                         </div>
 
                         <p-tag
-                            [severity]="userState.actividadB1!='completa'?'danger':undefined"
+                            [severity]="userState.actividadB1!='completa'?'danger':'success'"
                             class="absolute"
                             styleClass="dark:!bg-surface-900"
                             [style.left.px]="4"
@@ -156,7 +156,7 @@
                         </div>
 
                         <p-tag
-                            [severity]="userState.actividadB2!='completa'?'danger':undefined"
+                            [severity]="userState.actividadB2!='completa'?'danger':'success'"
                             class="absolute"
                             styleClass="dark:!bg-surface-900"
                             [style.left.px]="4"
