--- a/src/app/pages/internal-state/internal-state.component.html
+++ b/src/app/pages/internal-state/internal-state.component.html
@@ -361,7 +361,7 @@
 }
 
 <p-popover #op>
-    <div class="flex flex-col gap-4 w-[25rem]">
+    <div class="flex flex-col gap-4 w-[25rem] text-justify">
         El estado de la URS siginifica que cumple con todos los requisitos mínimos para poder aplicar a ecuatorianos en acción
     </div>
 </p-popover>
