fix bugs messages

--- a/src/app/pages/internal-state/internal-state.component.html
+++ b/src/app/pages/internal-state/internal-state.component.html
@@ -362,6 +362,10 @@
 
 <p-popover #op>
     <div class="flex flex-col gap-4 w-[25rem] text-justify">
-        El estado de la URS siginifica que cumple con todos los requisitos mínimos para poder aplicar a ecuatorianos en acción
+        Habilitado significa que cumple con los criterios generales establecidos en el Artículo 2 del Decreto
+        Presidencial 578 los cuales son; una edad comprendida entre 30 y 64 años con 11 meses, que no se encuentren
+        aportando al Instituto Ecuatoriano de Seguridad Social, que no sean beneficiarios de ninguna transferencia
+        monetaria pagada por el Ministerio de Inclusión Económica y Social; que no conste como fallecido; y que no tenga
+        antecedentes penales
     </div>
 </p-popover>
