--- a/src/app/pages/internal-state/internal-state.component.html
+++ b/src/app/pages/internal-state/internal-state.component.html
@@ -124,6 +124,18 @@
         <!--        <p>{{ userState.comentario }}</p>-->
         <!--    </div>-->
 
+    <div class=" flex flex-col gap-6 w-full">
+        <div class="grid grid-cols-1 md:grid-cols-12 gap-6">
+            <div class="md:col-span-12 flex flex-col gap-2">
+                <p-message size="large" severity="error">
+                    <h4>Para la recepción de inconvenientes del
+                        Mecanismo Ecuatorianos en Acción es del <b class="ml-1"> 27 de junio al 09 de julio de 2025</b>
+                    </h4>
+                </p-message>
+            </div>
+        </div>
+    </div>
+
     <div class="grid grid-cols-12 gap-4 grid-nogutter">
         <div class="col-span-4">
             <div
@@ -209,7 +221,7 @@
                 >
                     <div class="md:w-40 relative">
                         <div class="sticky-note">
-                            <p>Levantamiento Abril</p>
+                            <p>Gasolineras Abril</p>
                         </div>
 
                         <p-tag
@@ -234,7 +246,7 @@
                 >
                     <div class="md:w-40 relative">
                         <div class="sticky-note">
-                            <p>Levantamiento Mayo</p>
+                            <p>Encuestas Turísticas Mayo</p>
                         </div>
 
                         <p-tag
@@ -261,7 +273,7 @@
                 >
                     <div class="md:w-40 relative">
                         <div class="sticky-note">
-                            <p>Levantamiento Abril</p>
+                            <p>Gasolineras Abril</p>
                         </div>
 
                         <p-tag
@@ -286,7 +298,7 @@
                 >
                     <div class="md:w-40 relative">
                         <div class="sticky-note">
-                            <p>Levantamiento Mayo</p>
+                            <p>Encuestas Turísticas Mayo</p>
                         </div>
 
                         <p-tag
@@ -313,7 +325,7 @@
                 >
                     <div class="md:w-40 relative">
                         <div class="sticky-note">
-                            <p>Levantamiento Abril</p>
+                            <p>Gasolineras Abril</p>
                         </div>
 
                         <p-tag
@@ -338,7 +350,7 @@
                 >
                     <div class="md:w-40 relative">
                         <div class="sticky-note">
-                            <p>Levantamiento Mayo</p>
+                            <p>Encuestas Turísticas Mayo</p>
                         </div>
 
                         <p-tag
