--- a/src/app/pages/state/state.component.html
+++ b/src/app/pages/state/state.component.html
@@ -65,9 +65,8 @@
         <div class="grid grid-cols-1 md:grid-cols-12 gap-6">
             <div class="md:col-span-12 flex flex-col gap-2">
                 <p-message size="large" severity="error">
-                    <h4>Estimado benificiario, el plazo para la recepción de inconvenientes del
-                        Mecanismo Ecuatorianos en Acción es del <b class="ml-1"> 27 de junio al 09 de julio de 2025</b>,
-                        horario de atención, 08:00 a 16:30
+                    <h4>Estimado beneficiario, contactese con nosotros desde el <b class="ml-1"> 30 de junio al 09 de julio de 2025</b>,
+                        de Lunes a Viernes en el horario de atención, 08:00 a 16:30
                     </h4>
                 </p-message>
             </div>
