--- a/src/app/pages/state/state.component.html
+++ b/src/app/pages/state/state.component.html
@@ -84,7 +84,7 @@
                             <p-button label="Repotar Inconvenientes"
                                       [icon]="PrimeIcons.INFO_CIRCLE"
                                       [raised]="true"
-                                      (onClick)="filterPhones(userState.provincia)"></p-button>
+                                      (onClick)="filterPhones('curso')"></p-button>
                         </p>
                     </div>
 
@@ -116,7 +116,7 @@
                                 <p-button label="Repotar Inconvenientes"
                                           [icon]="PrimeIcons.INFO_CIRCLE"
                                           [raised]="true"
-                                          (onClick)="filterPhones(userState.provincia)" />
+                                          (onClick)="filterPhones('preservacion_abril')" />
                             </p>
                         </div>
 
@@ -146,7 +146,7 @@
                                 <p-button label="Repotar Inconvenientes"
                                           [icon]="PrimeIcons.INFO_CIRCLE"
                                           [raised]="true"
-                                          (onClick)="filterPhones(userState.provincia)" />
+                                          (onClick)="filterPhones('preservacion_mayo')" />
                             </p>
                         </div>
 
@@ -179,7 +179,7 @@
                                 <p-button label="Repotar Inconvenientes"
                                           [icon]="PrimeIcons.INFO_CIRCLE"
                                           [raised]="true"
-                                          (onClick)="filterPhones(userState.provincia)" />
+                                          (onClick)="filterPhones('levantamiento_abril')" />
                             </p>
                         </div>
 
@@ -211,7 +211,7 @@
                                 <p-button label="Repotar Inconvenientes"
                                           [icon]="PrimeIcons.INFO_CIRCLE"
                                           [raised]="true"
-                                          (onClick)="filterPhones(userState.provincia)" />
+                                          (onClick)="filterPhones('levantamiento_mayo')" />
                             </p>
                         </div>
 
@@ -266,7 +266,7 @@
     [style]="{ width: '30rem' }">
 
     <ng-template #header>
-        <h4>{{ filteredPhones?.province }}</h4>
+        <h4>{{ filteredPhones?.label }}</h4>
     </ng-template>
 
     @for (phone of filteredPhones?.phones; track phone) {
